--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -1,103 +1,184 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="description" content="We Are Studio Dragon">
+    <meta name="keywords" content="Studio Dragon, a premium storyteller group">
+    <meta name="author" content="Team 2eezy">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Studio Dragon">
+    <meta property="og:description" content="Studio Dragon, a premium storyteller group">
+    <meta property="og:image" content="	https://studiodragon.netlify.app/asset/og_img.png">
+    <meta property="og:url" content="https://studiodragon.netlify.app/">
+    <title>list of work</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/main_media.css">
+    <link rel="stylesheet" href="./lee/css/style.css">
+    <link rel="stylesheet" href="./lee/css//media.css">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/main_media.css">
-  <link rel="stylesheet" href="./lee/css/style.css">
-  <link rel="stylesheet" href="./lee/css//media.css">
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- GSAP Core -->
+    <script src="https://unpkg.com/@studio-freight/lenis@1.0.35/dist/lenis.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <!-- GSAP Core -->
-  <script src="https://unpkg.com/@studio-freight/lenis@1.0.35/dist/lenis.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <!-- ScrollTrigger 플러그인 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 
-  <!-- ScrollTrigger 플러그인 -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <!-- SplitText 플러그인 -->
+    <!-- <script src="https://assets.codepen.io/16327/SplitText3.min.js"></script> -->
+    <script src="/js/common.js"></script>
+    <script src="/lee/js/filter.js" defer></script>
 
-  <!-- SplitText 플러그인 -->
-  <!-- <script src="https://assets.codepen.io/16327/SplitText3.min.js"></script> -->
-  <script src="/js/common.js"></script>
-  <script src="/lee/js/filter.js" defer></script>
-
-  <title>list of work</title>
-</head>
+  </head>
 
 <body>
 
   <div id="star-container"></div>
 
   <div class="wrap">
-    <div class="header_bg">
-    </div>
-    <header class="">
-      <div class="inner">
-        <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
-        <nav class="">
-          <ul class="gnb">
-            <li class=""><a href="#">ABOUT</a>
-              <ul class="sub">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Business Ethics</a></li>
-                <li><a href="#">Partnerships</a></li>
-                <li><a href="#">History</a></li>
-                <li><a href="#">CEO Message</a></li>
-                <li><a href="#">Contact & Location</a></li>
-              </ul>
-            </li>
-            <li><a href="#">WORKS</a>
-              <ul class="sub">
-                <li><a href="#">Production List</a></li>
-                <li><a href="#">Viewer Participation</a></li>
-              </ul>
-            </li>
-            <li><a href="#">NEWSROOM</a>
-              <ul class="sub">
-                <li><a href="#">Notice</a></li>
-                <li><a href="#">News</a></li>
-              </ul>
-            </li>
-            <li><a href="#">IR</a>
-              <ul class="sub">
-                <li><a href="#">IR Insights</a></li>
-                <li><a href="#">Materials</a></li>
-              </ul>
-            </li>
-            <li><a href="#">SUSTAINABILITY</a>
-              <ul class="sub">
-                <li><a href="#">Sustainability Story</a></li>
-                <li><a href="#">Sustainability Activities</a></li>
-                <li><a href="#">Sustainability Report</a></li>
-                <li><a href="#">ESG Ratings</a></li>
-                <li><a href="#">Sustainability Report</a></li>
-              </ul>
-            </li>
-          </ul><!-- //.gnb -->
-          <div class="right">
-            <div class="lang ">
-              <a href="#" class="en">EN</a>
-              <a href="#" class="kr">KR</a>
-            </div><!-- //.lang -->
-            <div class="user">
-              <a href="#"><img src="back/img/user.png" alt="user"></a>
-            </div><!-- //.user -->
-            <div class="ham">
-              <ul>
+     <div class="header_bg">
+        </div>
+        <header class="">
+            <div class="inner">
+                <h1><a href="/index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <nav class="">
+                    <ul class="gnb">
+                        <li class=""><a href="/intro.html">ABOUT</a>
+                            <ul class="sub">
+                                <li><a href="/intro.html">About Us</a></li>
+                                <li><a href="index.html">Business Ethics</a></li>
+                                <li><a href="index.html">Partnerships</a></li>
+                                <li><a href="index.html">History</a></li>
+                                <li><a href="index.html">CEO Message</a></li>
+                                <li><a href="index.html">Contact & Location</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/Listworks_lee.html">WORKS</a>
+                            <ul class="sub">
+                                <li><a href="Listworks_lee.html">Production List</a></li>
+                                <li><a href="/viewersplayground_moon.html">Viewer Participation</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="index.html">NEWSROOM</a>
+                            <ul class="sub">
+                                <li><a href="index.html">Notice</a></li>
+                                <li><a href="index.html">News</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/IR.html">IR</a>
+                            <ul class="sub">
+                                <li><a href="IR.html">IR Insights</a></li>
+                                <li><a href="index.html">Materials</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="index.html">SUSTAINABILITY</a>
+                            <ul class="sub">
+                                <li><a href="index.html">Sustainability Story</a></li>
+                                <li><a href="index.html">Sustainability Activities</a></li>
+                                <li><a href="index.html">Sustainability Report</a></li>
+                                <li><a href="index.html">ESG Ratings</a></li>
+                                <li><a href="index.html">Sustainability Report</a></li>
+                            </ul>
+                        </li>
+                    </ul><!-- //.gnb -->
+                    <div class="right">
+                        <div class="lang">
+                            <a href="#" class="en active">EN</a>
+                            <a href="#" class="kr ">KR</a>
+                        </div><!-- //.lang -->
+                        <div class="user">
+                            <a href=""><img src="back/img/user.png" alt="user"></a>
+                        </div><!-- //.user -->
+                        <div class="nav_ham">
+                            <img src="/asset/nav_ham.svg" alt="">
+                        </div><!-- //.nav_ham -->
+                    </div><!-- //.right -->
+                </nav>
+            </div><!-- //.inner -->
+        </header>
+
+        <!-- 햄버거 메뉴 독립 배치 -->
+        <div class="ham">
+            <ul>
                 <li></li>
                 <li></li>
                 <li></li>
-              </ul>
+            </ul>
+        </div>
+
+        <!-- 햄버거 메뉴 네비게이션 -->
+        <nav class="ham_nav">
+            <div class="menu_header">
+                <div class="language_switcher">
+                    <a href="#" class="lang_link active">EN</a>
+                    <a href="#" class="lang_link">KO</a>
+                </div>
+
+                <div class="menu_icons">
+                    <a href="#" class="icon_link">
+                        <img src="back/img/user.png" alt="Profile">
+                    </a>
+                    <button type="button" class="icon_link close_btn">
+                        <img src="/asset/x-circle.svg" alt="">
+                    </button>
+                </div>
             </div>
-          </div><!-- //.right -->
-        </nav>
-      </div><!-- //.inner -->
-    </header>
+
+            <ul class="main_nav">
+                <li class="nav_item">
+                    <a href="/intro_kim/intro.html" class="main_category">ABOUT</a>
+                    <ul class="submenu">
+                        <li><a href="/intro.html">About Us</a></li>
+                        <li><a href="index.html">Business Ethics</a></li>
+                        <li><a href="index.html">Partnerships</a></li>
+                        <li><a href="index.html">History</a></li>
+                        <li><a href="index.html">CEO Message</a></li>
+                        <li><a href="index.html">Contact & Location</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="Listworks_lee.html" class="main_category">WORKS</a>
+                    <ul class="submenu">
+                        <li><a href="Listworks_lee.html">Production List</a></li>
+                        <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="index.html" class="main_category">NEWSROOM</a>
+                    <ul class="submenu">
+                        <li><a href="index.html">Notice</a></li>
+                        <li><a href="index.html">News</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="IR.html" class="main_category">IR</a>
+                    <ul class="submenu">
+                        <li><a href="IR.html">IR Insights</a></li>
+                        <li><a href="index.html">Materials</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="index.html" class="main_category">SUSTAINABILITY</a>
+                    <ul class="submenu">
+                        <li><a href="index.html">Sustainability Story</a></li>
+                        <li><a href="index.html">Sustainability Activities</a></li>
+                        <li><a href="index.html">Sustainability Report</a></li>
+                        <li><a href="index.html">ESG Ratings</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav><!-- //.ham_nav -->
+        <!-- 여기까지 헤더 -->
 
 
     <!-- https://codepen.io/iamryanyu/pen/PwZoovK !!!!!!!!!!-->
@@ -183,7 +264,7 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide"><a href="#"><img src="lee/img/Queen_of_Tears.webp" alt="">
                 <span>Queen of Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="lee/img/The_Glory4.jpg" alt=""><span>The
+            <div class="swiper-slide"><a href="/work_ryu.html"><img src="lee/img/The_Glory4.jpg" alt=""><span>The
                   Glory</span></a></div>
             <div class="swiper-slide"><a href="#"><img src="lee/img/Marry_My_Husband.jpg" alt=""><span>Marry My
                   Husband</span></a></div>
@@ -338,7 +419,7 @@
           </a>
         </li>
       </ul>
-            <ul class="poster-list">
+      <ul class="poster-list">
         <li>
           <a href="#">
             <img src="./lee/img/Our_Blooming_Youth.webp" alt="Poster 1">
