--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <li class="nav_item">
                     <a href="/intro_kim/intro.html" class="main_category">ABOUT</a>
                     <ul class="submenu">
-                        <li><a href="/intro_kim/intro.html">About Us</a></li>
+                        <li><a href="/intro.html">About Us</a></li>
                         <li><a href="index.html">Business Ethics</a></li>
                         <li><a href="index.html">Partnerships</a></li>
                         <li><a href="index.html">History</a></li>
@@ -176,7 +176,7 @@
                 <div class="footer_top">
                     <div class="footer_menu">
                         <div class="footer_gnb">
-                            <a href="/index.html" class="footer_gnb_link home">Home</a>
+                            <a href="index.html" class="footer_gnb_link home">Home</a>
                             <div class="footer_gnb_wrap">
                                 <ul class="footer_gnb_list">
                                     <li><a href="#" class="footer_gnb_link">Hotline</a></li>
