--- a/work_ryu.html
+++ b/work_ryu.html
@@ -123,7 +123,7 @@
                 <li class="nav_item">
                     <a href="/intro_kim/intro.html" class="main_category">ABOUT</a>
                     <ul class="submenu">
-                        <li><a href="/intro_kim/intro.html">About Us</a></li>
+                        <li><a href="/intro.html">About Us</a></li>
                         <li><a href="index.html">Business Ethics</a></li>
                         <li><a href="index.html">Partnerships</a></li>
                         <li><a href="index.html">History</a></li>
